# eml-cost

./: .gitignore  .graphifyignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: ADVERSARIAL_FINDINGS.md  README.md  adversarial.csv  adversarial_runner.py  speed.csv  speed_bench.py  speed_summary.json
docs/: registry_audit_2026_05_10.md
examples/: .pre-commit-config.example.yaml  demo.ipynb  expressions.example.txt
notebooks/: quickstart.ipynb  test_quickstart.py
scripts/: build_corpus_578.py
src/eml_cost/: __init__.py  analyze.py  batch.py  caching.py  canonicalize.py  certificate.py  classify_ode.py  cli.py  core.py  data_analyzer.py  dynamics.py  estimate_time.py  guards.py  lint.py  lint_ode.py  live_profile.py  predict_precision_loss.py  profile.py  recommend_form.py  regularizer.py  siblings.py  transpile.py  validate_pne_registry.py
src/eml_cost/data/: corpus_578.csv  demo_corpus.csv
src/eml_cost/explore/: commands.py
src/eml_cost/graph/: __init__.py  build.py  render.py
src/eml_cost/jupyter/: _formatter.py
src/eml_cost/regression/: __init__.py  benchmark.py  gp.py  nodes.py
src/eml_cost/witness/: core.py
tests/: test_api.py  test_batch.py  test_cache_by_fingerprint.py  test_canonicalize.py  test_certificate.py  test_classify_ode.py  test_cli.py  test_costlimit.py  test_data_analyzer.py  test_dynamics.py  test_estimate_time.py  test_extended_registry.py  test_fingerprint.py  test_lint.py  test_lint_ode.py  test_live_profile.py  test_predict_chain_order.py  test_predict_precision_loss.py  test_profile_metric.py  test_recommend_form.py  test_regularizer.py  test_regularizer_eml_finite.py  test_siblings.py  test_smoke_bench.py  test_stability_v010.py  test_transpile.py  test_v090_registry_extension.py
tests/explore/: test_cli.py
tests/graph/: test_build.py  test_render.py
tests/jupyter/: test_formatter.py
tests/regression/: test_benchmark.py  test_gp.py  test_nodes.py
tests/rewrite/: test_cli.py  test_cli_integration.py  test_core.py  test_counterexample.py  test_expansions.py  test_fix.py  test_notebook.py  test_path.py  test_synthesize.py
tests/witness/: test_witness.py
