[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "eml-cost"
version = "0.16.0"
description = "Pfaffian chain order, EML routing depth, and the symbolic-expression toolbelt for SymPy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PROPRIETARY-PRE-RELEASE" }
authors = [
    { name = "Monogate Research" },
]
keywords = [
    "symbolic-computation",
    "complexity-analysis",
    "pfaffian",
    "sympy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "sympy>=1.12",
]

[project.optional-dependencies]
# Subpackage extras — opt-in for heavier deps.
rewrite = []                                          # rewrite uses only sympy + eml-cost core
witness = ["eml-discover>=0.2.0"]                     # witness needs identify()
explore = ["eml-discover>=0.2.0"]                     # explore needs identify() too
graph = []                                            # graph emits DOT; no hard graphviz dep
jupyter = ["ipython>=7.0", "eml-discover>=0.2.0"]     # jupyter formatter + witness chain
data = ["numpy>=1.24", "scipy>=1.10"]                 # estimate_dynamics: FFT + Hilbert envelope
all = ["eml-discover>=0.2.0", "ipython>=7.0", "numpy>=1.24", "scipy>=1.10"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
    "ipython>=7.0",
    "eml-discover>=0.2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.scripts]
eml-cost = "eml_cost.cli:_entrypoint"
# Backwards-compatible console scripts — these used to live in
# their own packages, now provided by eml-cost so existing muscle
# memory keeps working after the standalone packages are
# deprecated.
eml-rewrite = "eml_cost.rewrite.cli:main"
eml-explore = "eml_cost.explore.cli:main"

[project.urls]
Homepage = "https://monogate.org"
Repository = "https://github.com/agent-maestro/eml-cost"
Issues = "https://github.com/agent-maestro/eml-cost/issues"
Changelog = "https://github.com/agent-maestro/eml-cost/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eml_cost = ["py.typed", "data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
